--- a/web/package.json
+++ b/web/package.json
@@ -23,7 +23,8 @@
     "next": "13.4.12",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "typescript": "5.1.6"
+    "typescript": "5.1.6",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.9.0",
