chore(web): fix dockerfile-web

--- a/Dockerfile-web
+++ b/Dockerfile-web
@@ -10,6 +10,7 @@ WORKDIR "/cinesync"
 # Copy package files
 COPY web/package.json .
 COPY web/next.config.js .
+COPY web/public public
 
 # Context: Dependencies
 FROM build AS dependencies
